account page with new look

--- a/system/templates/account.change_info.html.twig
+++ b/system/templates/account.change_info.html.twig
@@ -26,7 +26,7 @@ Here you can tell other players about yourself. This information will be display
 								</td>
 							</tr>
 							<tr>
-								<td class="LabelV" >Location:</td>
+								<td class="LabelV" >Address:</td>
 								<td>
 									<input name="info_location" value="{{ account_location }}" size="30" maxlength="50" >
 								</td>
