--- a/system/templates/account.generate_recovery_key.html.twig
+++ b/system/templates/account.generate_recovery_key.html.twig
@@ -21,11 +21,11 @@ To generate recovery key for your account please enter your password.<br/><br/>
 				<div class="InnerTableContainer">
 					<table style="width:100%;" >
 						<tr>
-							<td class="LabelV">
+							<td class="LabelV" style="width:15%;">
 								<span>Password:</span>
 							</td>
 							<td>
-								<input type="password" name="reg_password" size="30" maxlength="29" autofocus/>
+								<input style="width:70%;" type="password" name="reg_password" size="30" maxlength="29" autofocus/>
 							</td>
 						</tr>
 					</table>
