--- a/system/templates/exception.html.twig
+++ b/system/templates/exception.html.twig
@@ -64,6 +64,8 @@
 	<div class="center wide">
 		<h2 class="wide">Whoops something went wrong...</h2>
 		<div class="error wide">
+			Exception class: {{ exceptionClass }}()
+			<br/><br/>
 			{{ message }}
 			<br/><br/><br/>
 			<b>Backtrace:</b><br/><br/>
