--- a/system/templates/admin.login.html.twig
+++ b/system/templates/admin.login.html.twig
@@ -16,8 +16,7 @@
 				<div class="form-group">
 					<div class="form-group input-group">
 						<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-						<input type="text" class="form-control" id="account-name-input" name="account_login"
-							   placeholder="Account {{ account }}" required autofocus>
+						<input type="text" class="form-control" id="account-name-input" name="account_login" placeholder="{{ account_login_by }}" required autofocus>
 					</div>
 					<div class="form-group input-group">
 						<span class="input-group-addon"><i class="fa fa-key"></i></span>
