--- a/templates/tibiacom/basic.css
+++ b/templates/tibiacom/basic.css
@@ -18,6 +18,62 @@ img {
   min-width: 1000px;
 }
 
+/* helper div */
+.HelperDivIndicator {
+  position: relative;
+  cursor: help;
+}
+.OptionContainer {
+    text-align: center;
+}
+
+#HelperDivContainer {
+  display: none;
+  position: absolute;
+  width: 225px;
+  z-index: 1000;
+  color: #5A2800;
+  font-family: Verdana, Arial, Times New Roman, sans-serif;
+  font-size: 9pt;
+  text-align: left;
+  padding: 10px;
+  border: 1px double #5A2800;
+  margin-left: 8px;
+}
+
+#HelperDivContainer .HelperDivArrow {
+  position: absolute;
+  top: -1px;
+  left: -8px;
+  width: 8px;
+  height: 13px;
+}
+
+#HelperDivContainer #HelperDivHeadline {
+  font-size: 12pt;
+  font-weight: bold;
+}
+
+#HelperDivContainer #HelperDivHeadline {
+  position: relative;
+  white-space: normal;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
+#HelperDivContainer .Ornament {
+  width: 220px;
+}
+
+#HelperDivContainer #HelperDivText {
+  text-align: center;
+}
+
+#HelperDivContainer #HelperDivText ul {
+  padding-left: 20px;
+}
+
 /* container to implement min/max width */
 #Bodycontainer {
   text-align: left;
@@ -31,6 +87,16 @@ img {
   padding: 0px;
   display: table;
   width: expression(document.body.clientWidth > 1200? "1200px": "100%" );
+}
+#LoginCreateAccountBox p {
+    margin: 0;
+    padding: 0;
+    font-size: 12pt;
+}
+#LoginFormButtonCell {
+    width: 145px;
+    vertical-align: top;
+    padding-right: 0;
 }
 
 #ContentRow {
