--- a/system/templates/admin.login.html.twig
+++ b/system/templates/admin.login.html.twig
@@ -1,37 +1,33 @@
-<div class="login-box">
+<div class="vh-100" style="display: flex; align-items: center;">
+
+<div class="form-signin">
 	{% if logout %}
-		<div class="alert alert-success alert-dismissible">
-			<button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
-			<h4><i class="icon fa fa-check"></i> Status</h4>
-			{{ logout }}
+		<div class="alert alert-success alert-dismissible fade show" role="alert">
+		  {{ logout }}
+		  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 		</div>
 	{% endif %}
 
-	<form method="post">
-		<div class="box box-info">
-			<div class="box-header with-border">
-				<h3 class="box-title">Please login.</h3>
-			</div>
-			<div class="box-body">
-				<div class="form-group">
-					<div class="form-group input-group">
-						<span class="input-group-addon"><i class="fa fa-lock"></i></span>
-						<input type="text" class="form-control" id="account-name-input" name="account_login" placeholder="{{ account_login_by }}" required autofocus>
-					</div>
-					<div class="form-group input-group">
-						<span class="input-group-addon"><i class="fa fa-key"></i></span>
-						<input type="password" class="form-control" placeholder="Password" name="password_login"
-							   placeholder="Password" required>
-					</div>
-				</div>
-			</div>
-			<div class="box-footer">
-				<label>
-					<input type="checkbox" id="remember_me" name="remember_me" value="true"> Remember me
-				</label>
-				<input type="hidden" name="admin" value="1"/>
-				<button type="submit" class="btn btn-info pull-right">Sign in</button>
-			</div>
-		</div>
+<form method="post">
+<main class="form-signin text-center">
+    <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+    <div class="form-floating">
+      <input type="email" class="form-control" id="account-name-input" name="account_login" placeholder="{{ account_login_by }}" required autofocus>
+      <label for="floatingInput" style="color: #000;">Email address</label>
+    </div>
+    <div class="form-floating">
+      <input type="password" class="form-control" placeholder="Password" name="password_login" placeholder="Password" required>
+      <label for="floatingPassword" style="color: #000;">Password</label>
+    </div>
+    <div class="checkbox mb-3">
+      <label>
+        <input type="checkbox" id="remember_me" name="remember_me" value="true"> Remember me
+      </label>
+    </div>
+	<input type="hidden" name="admin" value="1"/>
+    <button type="submit" class="w-100 btn btn-lg btn-primary" type="submit">Sign in</button>
+</main>
 	</form>
+</div>
+
 </div>
