--- a/system/templates/admin.statistics.html.twig
+++ b/system/templates/admin.statistics.html.twig
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-md-2 col-sm-6 col-xs-12">
 		<div class="info-box">
-			<span class="info-box-icon bg-aqua"><i class="ion ion-person-add"></i></span>
+			<span class="info-box-icon bg-aqua"><i class="fa-solid fa-users"></i></span>
 			<div class="info-box-content">
 				<span class="info-box-text">Total accounts:</span>
 				<span class="info-box-number">{{ total_accounts }}</span>
@@ -10,7 +10,7 @@
 	</div>
 	<div class="col-md-2 col-sm-6 col-xs-12">
 		<div class="info-box">
-			<span class="info-box-icon bg-red"><i class="fa fa-male"></i></span>
+			<span class="info-box-icon bg-red"><i class="fa-solid fa-user"></i></span>
 			<div class="info-box-content">
 				<span class="info-box-text">Total players:</span>
 				<span class="info-box-number">{{ total_players }}</span>
@@ -19,7 +19,7 @@
 	</div>
 	<div class="col-md-2 col-sm-6 col-xs-12">
 		<div class="info-box">
-			<span class="info-box-icon bg-green"><i class="ion ion-pie-graph"></i></span>
+			<span class="info-box-icon bg-green"><i class="fa-solid fa-user-shield"></i></span>
 			<div class="info-box-content">
 				<span class="info-box-text">Total guilds:</span>
 				<span class="info-box-number">{{ total_guilds }}</span>
@@ -28,19 +28,10 @@
 	</div>
 	<div class="col-md-2 col-sm-6 col-xs-12">
 		<div class="info-box">
-			<span class="info-box-icon bg-yellow"><i class="fa fa-home"></i></span>
+			<span class="info-box-icon bg-yellow"><i class="fa-solid fa-house-user"></i></span>
 			<div class="info-box-content">
 				<span class="info-box-text">Total houses:</span>
 				<span class="info-box-number">{{ total_houses }}</span>
-			</div>
-		</div>
-	</div>
-	<div class="col-md-2 col-sm-6 col-xs-12">
-		<div class="info-box">
-			<span class="info-box-icon bg-blue"><i class="fa fa-users"></i></span>
-			<div class="info-box-content">
-				<span class="info-box-text">Char Bazaar:</span>
-				<span class="info-box-number">0</span>
 			</div>
 		</div>
 	</div>
