--- a/tools/css/messages.css
+++ b/tools/css/messages.css
@@ -1,24 +1,18 @@
 .error, .success, .note, .warning {
-	font-weight: bold;
-	font-size: 11px;
-	padding: 4px 10px 4px 24px;
-	background-repeat: no-repeat;
-	background-position: 5px 6px;
-	border-style: solid;
-	border-width: 1px;
+	padding: 1rem 1rem;
+    margin-bottom: 1rem;
+    border-radius: 0.25rem;
 }
 .error {
-	background-color: #FDD9D9;
-	border-color: #FBA3A3;
-	color: #D80303;
+	background-color: #dc3545;
+	color: #fff;
 }
 .error-image {
 	background-image: url(images/error.gif);
 }
 .success {
-	background-color: #E4FCD9;
-	border-color: #BFFDA3;
-	color: #35A502;
+	color: #0f5132;
+    background-color: #d1e7dd;
 }
 .success-image {
 	background-image: url(images/success.gif);
