--- a/system/templates/account.create_character.html.twig
+++ b/system/templates/account.create_character.html.twig
@@ -233,7 +233,7 @@ In any case the name must not violate the naming conventions stated in the <a hr
                       <table class="TableContent" width="100%" style="border:1px solid #faf0d7;">
                         <tbody>
                           <tr class="LabelH">
-                            <td colspan="2">Select your vocation</td>
+                            <td colspan="2">Select your town</td>
                           </tr>
                           <tr class="Odd">
                           {% for town_id in config.character_towns %}
