Correction of images and links on the spells page

--- a/system/templates/spells.html.twig
+++ b/system/templates/spells.html.twig
@@ -42,8 +42,7 @@
 <p>Here you can see the list of all available spells in Tibia. Click on any spell name to get detailed information.
 	Please adjust the search criteria below if you want to see just certain spells. Also, you can sort the spell list by
 	any column of your choice.
-	For general information about spells and magic in Tibia please see the
-	<a target="_blank" href="https://www.tibia.com/gameguides/?subtopic=manual&section=magic%22">Manual</a>.</p>
+	For general information about spells and magic in Tibia please see the Manual.</p>
 
 <div class="TableContainer">
 	<div class="CaptionContainer">
