--- a/system/templates/achievements.html.twig
+++ b/system/templates/achievements.html.twig
@@ -1,20 +1,20 @@
 <div class="SmallBox">
 	<div class="MessageContainer">
-		<div class="BoxFrameHorizontal" style="background-image:url(https://static.tibia.com/images/global/content/box-frame-horizontal.gif);"></div>
-		<div class="BoxFrameEdgeLeftTop" style="background-image:url(https://static.tibia.com/images/global/content/box-frame-edge.gif);"></div>
-		<div class="BoxFrameEdgeRightTop" style="background-image:url(https://static.tibia.com/images/global/content/box-frame-edge.gif);"></div>
+		<div class="BoxFrameHorizontal" style="background-image:url({{ PATH_URL }}/images/global/content/box-frame-horizontal.gif);"></div>
+		<div class="BoxFrameEdgeLeftTop" style="background-image:url({{ PATH_URL }}/images/global/content/box-frame-edge.gif);"></div>
+		<div class="BoxFrameEdgeRightTop" style="background-image:url({{ PATH_URL }}/images/global/content/box-frame-edge.gif);"></div>
 		<div class="Message">
-			<div class="BoxFrameVerticalLeft" style="background-image:url(https://static.tibia.com/images/global/content/box-frame-vertical.gif);"></div>
-			<div class="BoxFrameVerticalRight" style="background-image:url(https://static.tibia.com/images/global/content/box-frame-vertical.gif);"></div>
+			<div class="BoxFrameVerticalLeft" style="background-image:url({{ PATH_URL }}/images/global/content/box-frame-vertical.gif);"></div>
+			<div class="BoxFrameVerticalRight" style="background-image:url({{ PATH_URL }}/images/global/content/box-frame-vertical.gif);"></div>
 			<table style="width:100%;">
 				<tbody>
 				<tr><td style="width:100%;text-align:center;"><nobr>[<a href="{{ BASE_URL }}?achievements#Grade+1">Grade 1</a>]</nobr> <nobr>[<a href="{{ BASE_URL }}?achievements#Grade+2">Grade 2</a>]</nobr> <nobr>[<a href="{{ BASE_URL }}?achievements#Grade+3">Grade 3</a>]</nobr> <nobr>[<a href="{{ BASE_URL }}?achievements#Grade+4">Grade 4</a>]</nobr> <nobr>[<a href="{{ BASE_URL }}?achievements#Secret+Achievements">Secret Achievements</a>]</nobr> </td></tr>
 				</tbody>
 			</table>
 		</div>
-		<div class="BoxFrameHorizontal" style="background-image:url(https://static.tibia.com/images/global/content/box-frame-horizontal.gif);"></div>
-		<div class="BoxFrameEdgeRightBottom" style="background-image:url(https://static.tibia.com/images/global/content/box-frame-edge.gif);"></div>
-		<div class="BoxFrameEdgeLeftBottom" style="background-image:url(https://static.tibia.com/images/global/content/box-frame-edge.gif);"></div>
+		<div class="BoxFrameHorizontal" style="background-image:url({{ PATH_URL }}/images/global/content/box-frame-horizontal.gif);"></div>
+		<div class="BoxFrameEdgeRightBottom" style="background-image:url({{ PATH_URL }}/images/global/content/box-frame-edge.gif);"></div>
+		<div class="BoxFrameEdgeLeftBottom" style="background-image:url({{ PATH_URL }}/images/global/content/box-frame-edge.gif);"></div>
 	</div>
 </div>
 <br>
