--- a/system/templates/characters.html.twig
+++ b/system/templates/characters.html.twig
@@ -36,7 +36,7 @@
 			<span class="CaptionEdgeRightBottom" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span>
 		</div>
 	</div>
-	
+
 	<table class="Table3" cellpadding="0" cellspacing="0">
 	<tbody>
 	<tr>
@@ -49,43 +49,49 @@
 	<div class="TableContentContainer">
 	<table class="TableContent" width="100%" style="border:1px solid #faf0d7;">
 	<tbody>
-	
+
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
 	<td width="20%" class="LabelV175">Name:</td>
 	<td>{% if skull is not null %}<img src="images/{{ skull }}.gif">{% endif %} {{ player.getName() }} {{ oldName }} {% if player.isOnline() %}<img src="{{ template_path }}/images/on.gif" title="Online">{% else %}<img src="{{ template_path }}/images/off.gif" title="Offline">{% endif %}<div style="float: right"></div></td>
 	</tr>
-	
+
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
 	<td class="LabelV175">Country:</td>
-	<td>{{ flag|raw }}</td>
+	<td>{{ country }} {{ flag|raw }}</td>
 	</tr>
-	
+
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
 	<td class="LabelV175">Sex:</td>
 	<td>{{ sex }}</td>
 	</tr>
-	
+
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
 	<td class="LabelV175">Vocation:</td>
 	<td>{{ vocation }}</td>
 	</tr>
-	
+
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
 	<td class="LabelV175">Level:</td>
 	<td>{{ player.getLevel() }}</td>
 	</tr>
-	
+
+	{% set rows = rows + 1 %}
+	<tr bgcolor="{{ getStyle(rows) }}">
+		<td class="LabelV175">Achievement Points:</td>
+		<td>{{ achievementPoints }}</td>
+	</tr>
+
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
 	<td class="LabelV175">Residence:</td>
 	<td>{{ town }}</td>
 	</tr>
-	
+
 	{% if frags_enabled %}
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
@@ -93,7 +99,7 @@
 	<td>{{ frags_count }}</td>
 	</tr>
 	{% endif %}
-	
+
 	{% if config.characters.balance %}
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
@@ -101,7 +107,7 @@
 	<td>{{ player.getBalance() }} Gold Coins.</td>
 	</tr>
 	{% endif %}
-	
+
 	{% if house.found %}
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
@@ -109,7 +115,7 @@
 	<td><a href="">{{ house.name ~ house.town ~ house.add }}</a></td>
 	</tr>
 	{% endif %}
-	
+
 	{% if guild.rank is not null %}
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
@@ -117,7 +123,7 @@
 	<td>{{ guild.rank }} of the <a href="">{{ guild.link|raw }}</a></td>
 	</tr>
 	{% endif %}
-	
+
 	{% if marriage_enabled %}
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
@@ -125,13 +131,13 @@
 	<td><a href="">{{ marital_status }}</a></td>
 	</tr>
 	{% endif %}
-	
+
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
 	<td class="LabelV175">Last Login:</td>
 	<td>{% if player.getLastLogin() == 0 %}Never logged in.{% else %}{{ player.getLastLogin()|date("M d Y, H:i:s") }} CEST{% endif %}</td>
 	</tr>
-	
+
 	{% if comment is not null %}
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
@@ -139,13 +145,13 @@
 	<td>{{ comment|raw }}</td>
 	</tr>
 	{% endif %}
-	
+
 	{% set rows = rows + 1 %}
 	<tr bgcolor="{{ getStyle(rows) }}">
 	<td class="LabelV175">Account Status:</td>
 	<td>{% if account.isPremium() %}<font color="green"><b>Premium Account</b></font>{% else %}<font color="red">Free Account</font>{% endif %}</td>
 	</tr>
-	
+
 	</tbody>
 	</table>
 	</div>
@@ -158,8 +164,8 @@
 	</tr>
 	</tbody>
 	</table>
-	
-	
+
+
 </div>
 </td>
 </tr>
@@ -492,15 +498,17 @@ Have <b>{{ player.getExperience() }}</b> and need <b>{{ expLeft }}</b> to Level 
 	<span class="CaptionEdgeLeftBottom" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span>
 	<span class="CaptionEdgeRightBottom" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span>
 </div></div>
+	<div style="top: 15px;" id="QuestsCollapse" class="BigToggleButton" onclick="CollapseTable('QuestsCollapseContainer'); $('#labelshow').html($('#labelshow').html() == 'show' ? 'hide' : 'show');" onmouseover="ActivateHelperDiv($(this), '', 'Clique aqui para expandir a lista de Quests.', '');" onmouseout="$('#HelperDivContainer').hide();">
+		<div id="Indicator_QuestsCollapseContainer" class="CircleSymbolMinus" style="position: absolute; height: 18px; width: 18px; top: -8px; right: -8px; z-index: 99; cursor: pointer; background-image: url({{ BASE_URL }}templates/tibiacom/images/global/content/circle-symbol-plus.gif);"></div>
+	</div>
 <table class="Table3" cellpadding="0" cellspacing="0">
 <tbody><tr>
 <td>
-<div class="InnerTableContainer">
-<table style="width:50%;"><tbody><tr><td>
+<div class="InnerTableContainer" id="QuestsCollapseContainer" style="display: none">
+<table style="width:100%;"><tbody><tr><td>
 <div class="TableContentContainer">
 <table class="TableContent" width="100%" style="border:1px solid #faf0d7;">
 <tbody>
-
 {% set i = 0 %}
 {% for name, done in quests %}
 {% set i = i + 1 %}
@@ -508,10 +516,9 @@ Have <b>{{ player.getExperience() }}</b> and need <b>{{ expLeft }}</b> to Level 
 {% set rows = rows + 1 %}
 <tr bgcolor="{{ getStyle(rows) }}">
 <td style="width: 90%;" class="LabelV175">{{ name }}</td>
-<td><img src="images/{% if done %}true{% else %}false{% endif %}.png"></td>
+<td><img src="templates/tibiacom/images/premiumfeatures/icon_{% if done %}yes{% else %}no{% endif %}.png" title="{% if done %}Completed{% else %}Incomplete{% endif %}"></td>
 </tr>
 {% endfor %}
-
 </tbody></table>
 </div></td></tr>
 </tbody></table>
@@ -519,20 +526,66 @@ Have <b>{{ player.getExperience() }}</b> and need <b>{{ expLeft }}</b> to Level 
 </td>
 </tr>
 </tbody></table></div>
-
 <br>
-
-
-
-
-
-
-
-
+<div class="TableContainer">
+	<div class="CaptionContainer">
+		<div class="CaptionInnerContainer">
+			<span class="CaptionEdgeLeftTop" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span>
+			<span class="CaptionEdgeRightTop" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span>
+			<span class="CaptionBorderTop" style="background-image:url({{ template_path }}/images/global/content/table-headline-border.gif);"></span>
+			<span class="CaptionVerticalLeft" style="background-image:url({{ template_path }}/images/global/content/box-frame-vertical.gif);"></span>
+			<div class="Text">Account Achievements</div>
+			<span class="CaptionVerticalRight" style="background-image:url({{ template_path }}/images/global/content/box-frame-vertical.gif);"></span>
+			<span class="CaptionBorderBottom" style="background-image:url({{ template_path }}/images/global/content/table-headline-border.gif);"></span>
+			<span class="CaptionEdgeLeftBottom" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span>
+			<span class="CaptionEdgeRightBottom" style="background-image:url({{ template_path }}/images/global/content/box-frame-edge.gif);"></span>
+		</div></div>
+	<div style="top: 15px;" id="AchievementsCollapse" class="BigToggleButton" onclick="CollapseTable('AchievementsCollapseContainer'); $('#labelshow').html($('#labelshow').html() == 'show' ? 'hide' : 'show');" onmouseover="ActivateHelperDiv($(this), '', 'Clique aqui para expandir a lista de Achievements.', '');" onmouseout="$('#HelperDivContainer').hide();">
+		<div id="Indicator_AchievementsCollapseContainer" class="CircleSymbolMinus" style="position: absolute; height: 18px; width: 18px; top: -8px; right: -8px; z-index: 99; cursor: pointer; background-image: url({{ BASE_URL }}templates/tibiacom/images/global/content/circle-symbol-plus.gif);"></div>
+	</div>
+	<table class="Table3" cellpadding="0" cellspacing="0">
+		<tbody><tr>
+			<td>
+				<div class="InnerTableContainer" id="AchievementsCollapseContainer" style="display: none">
+					<table style="width:100%;"><tbody><tr><td>
+								<div class="TableContentContainer">
+									<table class="TableContent" width="100%" style="border:1px solid #faf0d7;">
+										<tbody>
+										{% set i = 0 %}
+										{% for achievement in achievements %}
+											{% set i = i + 1 %}
+											{% set rows = rows + 1 %}
+											<tr bgcolor="{{ getStyle(rows) }}">
+												{% if achievement.grade == 1 %}
+													<td><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"></td>
+												{% endif %}
+												{% if achievement.grade == 2 %}
+													<td><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"></td>
+												{% endif %}
+												{% if achievement.grade == 3 %}
+													<td><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"></td>
+												{% endif %}
+												{% if achievement.grade == 4 %}
+													<td><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"><img src="{{ BASE_URL }}images/global/general/achievement-grade-symbol.gif" alt="Tibia Achievement"></td>
+												{% endif %}
+												<td style="width: 75%;">
+													{{ achievement.name }}
+													{% if achievement.secret == 1 %}
+													<img class="SecretAchievementIcon" src="{{ BASE_URL }}images/global/general/achievement-secret-symbol.gif" alt="Tibia Secret Achievement">
+													{% endif %}
+												</td>
+											</tr>
+										{% endfor %}
+										</tbody></table>
+								</div></td></tr>
+						</tbody></table>
+				</div>
+			</td>
+		</tr>
+		</tbody></table></div>
+<br>
 <table border="0" cellpadding="0" cellspacing="0" width="100%"><tr>
 	<td>
-        
-
 		{% if deaths|length > 0 %}
 		<!-- DEATHS -->
 		<br/>
@@ -618,9 +671,9 @@ Have <b>{{ player.getExperience() }}</b> and need <b>{{ expLeft }}</b> to Level 
 		{{ hook(constant('HOOK_CHARACTERS_AFTER_SIGNATURE')) }}
 		{% if not hidden %}
 		{% set rows = 0 %}
-		
-		
-		
+
+
+
 
 
 
@@ -676,7 +729,7 @@ Have <b>{{ player.getExperience() }}</b> and need <b>{{ expLeft }}</b> to Level 
 							<tr>
 								<td style="border: 0;">
 									<input type="hidden" name="name" value="{{ player.getName() }}"/>
-									
+
 									<div class="BigButton" style="background-image:url({{ template_path }}/images/global/buttons/sbutton.gif)">
 <div onmouseover="MouseOverBigButton(this);" onmouseout="MouseOutBigButton(this);"><div class="BigButtonOver" style="background-image: url({{ template_path }}/images/global/buttons/sbutton_over.gif); visibility: hidden;"></div>
 <input class="BigButtonText" type="submit" name="View {{ player.getName() }}" alt="View {{ player.getName() }}" value="View"></div>
@@ -706,7 +759,7 @@ Have <b>{{ player.getExperience() }}</b> and need <b>{{ expLeft }}</b> to Level 
 </div>
 </td>
 </tr>
-</tbody></table></div>		
+</tbody></table></div>
 {% endif %}
 
 {{ hook(constant('HOOK_CHARACTERS_AFTER_CHARACTERS')) }}
