Fix account name in create account page

--- a/install/template/style.css
+++ b/install/template/style.css
@@ -1,389 +1,35 @@
-* {
-    margin: 0;
-    padding: 0;
+html, body {
+    height: 100%;
 }
-
 body {
-	text-align: center;
-    font-family: Verdana;
-    font-size: 12px;
-	color: #3e3e3e;
-	background-color: #f9f9f9;
+    display: flex;
+    align-items: center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    background-color: #f2f3f8;
 }
-
-img {
-    border: 0;
+.install {
+    width: 100%;
+    max-width: 910px;
+    margin: auto;
 }
-
-.break {
-    font-size: 0;
-    width: 0;
-    height: 0;
-    clear: both;
+.container_install {
+    width: 100%;
+    max-width: 910px;
+    margin: auto;
 }
-
-.alignleft {
-    float: left;
-    margin: 4px 10px 5px 0;
+ul {
+    list-style-type: none;
 }
-
-.alignright {
-    float: right;
-    margin: 4px 0 5px 10px;
+li{
+    background-color: #ebeced;
+    border-radius: 0.3rem;
 }
-
-.aligncenter {
-    text-align: center;
-}
-
-/** BEGIN wrapper **/
-#wrapper {
-	background: #fff;
-	width: 60%;
-	top: 50%;
-	left: 50%;
-	margin: 50px auto;
-	border: 1px solid #ddd;
-	border-radius: 5px;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
-}
-
-#header {
-	margin-bottom: 10px;
-	padding: 20px 0;
-	background: #26385a;
-	color: #fbfbfb;
-	border-bottom: 1px solid #ddd;
-}
-
-#footer {
-    text-align: right;
-    color: #555;
-}
-
-#header h1 {
+li.current {
+    color: #fff;
+    background-color: green;
     font-weight: bold;
+}
+.success{
     margin: 0;
-    padding: 0;
-}
-
-#header span {
-    font-size: 25px;
-    color: #000;
-    font-weight: bold;
-    padding-left: 40px;
-    line-height: 80px;
-}
-
-#version {
-    float: right;
-    color: #000;
-    font-size: 17px;
-    padding-top: 25px;
-    padding-right: 5px;
-}
-
-/** BEGIN body **/
-#body {
-}
-
-/** END body **/
-
-/** BEGIN content **/
-#content {
-	width: 70%;
-	float: left;
-	padding: 30px 18px 30px 20px;
-	color: #434242;
-	text-align: left;
-}
-
-/** begin headers **/
-h1, h2, h3, h4, h5, h6 {
-    font-family: Tahoma;
-    margin-bottom: 10px;
-}
-
-h2, h3, h4, h5, h6 {
-    margin-top: 30px;
-}
-
-h1 {
-    font-size: 2em;
-}
-
-h2 {
-    font-size: 1.6em;
-}
-
-h3 {
-    font-size: 1.3em;
-}
-
-h4, h5, h6 {
-    font-size: 1em;
-}
-
-/** end headers **/
-
-/** begin messages **/
-.error, .success, .note, .warning {
-    font-weight: bold;
-    font-size: 0.9em;
-    padding: 4px 10px 4px 24px;
-    background-repeat: no-repeat;
-    background-position: 5px 6px;
-    border-style: solid;
-    border-width: 1px;
-    line-height: 1.6em;
-    margin-bottom: 10px;
-	border-radius: 5px;
-}
-
-.error {
-    background-color: #FDD9D9;
-    background-image: url(images/error.gif);
-    border-color: #FBA3A3;
-    color: #D80303;
-}
-
-.success {
-    background-color: #E4FCD9;
-    background-image: url(images/success.gif);
-    border-color: #BFFDA3;
-    color: #35A502;
-}
-
-.note {
-    background-color: #DDEAFA;
-    background-image: url(images/note.gif);
-    border-color: #A3D8FD;
-    color: #026DA5;
-}
-
-.warning {
-    background-color: #FBF0B3;
-    background-image: url(images/warning.gif);
-    border-color: #FBBB95;
-    color: #FD6002;
-}
-
-/** end messages **/
-
-/** begin form **/
-form {
-    border: 1px solid #DDDDDD;
-    padding: 16px;
-}
-
-form .input {
-    clear: both;
-    padding-top: 5px;
-}
-
-form input[type='text'] {
-	margin-right: 5px;
-	border: 1px solid #ddd;
-	padding: 10px 10px;
-	border-radius: 5px;
-	width: 90%;
-}
-
-form .first {
-    padding-top: 0;
-}
-
-form .input p {
-    margin-bottom: 7px !important;
-}
-
-form input {
-    margin-right: 5px;
-}
-
-form label {
-    margin-right: 10px;
-    color: #8B8B8B;
-}
-
-form input.text, form textarea {
-	border: 1px solid #dddddd;
-	border-radius: 5px;
-    font-size: 1em;
-    font-family: Verdana;
-    background-color: #F3F3F3;
-    color: #808080;
-    padding: 2px;
-    max-width: 100%;
-	width: 100%;
-	min-height: 320px;
-}
-
-.positive, .negative {
-    font-size: 0.9em;
-    font-weight: bold;
-    padding: 1px 0 0 20px;
-    background-repeat: no-repeat;
-    background-position: 0 0;
-    display: inline;
-    margin-top: 2px;
-}
-
-.positive {
-    background-image: url(images/positive.gif);
-    color: #35A502;
-}
-
-.negative {
-    background-image: url(images/negative.gif);
-    color: #D80303;
-}
-
-form textarea {
-    line-height: 1.6em;
-}
-
-form button, form input.button {
-	font-family: Verdana;
-	font-weight: bold;
-	color: #ffffff;
-	background: #33952c;
-	border: 1px solid #30a34d;
-	padding: 5px 25px;
-	border-radius: 0.3rem;
-}
-
-form button:hover, form input.button:hover {
-	cursor: pointer;
-	background: #226a1d;
-}
-
-form select {
-	border: 1px solid #ddd;
-	padding: 7px 10px;
-}
-/** end form **/
-
-/** begin table **/
-table {
-
-}
-
-table th {
-    font-size: 0.9em;
-    color: #ffffff;
-    background-color: #679BC5;
-    padding: 2px 4px;
-    line-height: 1.6em;
-}
-
-table td {
-    line-height: 1.6em;
-    padding: 2px 4px;
-    border-bottom: 0;
-}
-
-table tr.odd td {
-    background-color: #EEEEEE;
-}
-
-table tr.even td {
-    background-color: #E5E5E5;
-}
-
-/** end table **/
-
-/** begin paragraphs, lists, etc. **/
-#content p {
-    line-height: 1.6em;
-    margin-bottom: 10px;
-}
-
-#content ul, #content ol {
-    list-style-position: inside;
-}
-
-#content li {
-    line-height: 1.6em;
-    padding: 2px 0 2px 0;
-}
-
-a {
-    color: #679BC5;
-}
-
-a:hover {
-    color: #ff0000;
-    text-decoration: none;
-}
-
-blockquote {
-    padding: 10px;
-    background-color: #eeeeee;
-    line-height: 1.6em;
-    border-width: 2px 0 1px;
-    border-style: solid;
-    border-color: #e0e0e0;
-}
-
-/** end paragraphs, lists, etc. **/
-
-/** END content **/
-
-/** BEGIN sidebar **/
-#sidebar {
-	width: 25%;
-	float: right;
-}
-
-#sidebar h2 {
-	background: #26385a;
-	margin: 0 10px;
-	font-size: 16px;
-	color: #ffffff;
-	padding: 13px 10px;
-	text-transform: uppercase;
-	border-radius: 5px 5px 0 0;
-}
-
-#sidebar ul {
-	list-style-type: none;
-	background: #e9e9e9;
-	padding: 10px;
-	margin: 0 10px 10px;
-	border-radius: 0 0 5px 5px;
-}
-
-#sidebar ul li {
-    padding: 4px 0 4px 14px;
-    background: none;
-    line-height: 1.6em;
-    font-size: 14px;
-	text-align: left;
-    font-weight: bold;
-}
-
-#sidebar ul li a {
-    color: #000000;
-    text-decoration: none;
-}
-
-#sidebar ul li a:hover {
-    text-decoration: none;
-    color: #ff0000;
-}
-
-#sidebar ul li a:active {
-    text-decoration: none;
-    color: #ff0000;
-}
-
-#sidebar ul li current {
-    text-decoration: none;
-    color: #ff0000;
-}
-
-.current {
-    text-decoration: none;
-    color: #ff9900;
 }
